<resources>
    <string name="app_name">drawer_testing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_signIn">Sign in</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="string_default_web_client_id">
        1086590041501-tl3jqsgfd4vbk6cib760bnv733qr0kjt.apps.googleusercontent.com
    </string>

</resources>