<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signIn"
            android:icon="@drawable/ic_baseline_cruelty_free_24"
            android:title="@string/menu_signIn" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_signOut" />
    </group>
</menu>