<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.drawer_testing.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_signIn"
            app:destination="@id/nav_signIn" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.drawer_testing.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.drawer_testing.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_signIn"
        android:name="com.example.drawer_testing.ui.auth.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />
    <fragment
        android:id="@+id/nav_signOut"
        android:name="com.example.drawer_testing.ui.auth.SignOutFragment"
        android:label="fragment_sign_out"
        tools:layout="@layout/fragment_sign_out" >
        <action
            android:id="@+id/action_nav_signOut_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>